# Glitch-Art-

./: README.md
GlitchArt/: GlitchArt.cabal  README.md
GlitchArt/src/: Main.hs
