name:                GlitchArt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rnunz/GlitchArt
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          raphnun@tuta.io
copyright:           2019 Author Raphael Nunziata
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable GlitchArt
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
